@@ -1,0 +1,1 @@
+This should cause an error with check-manifest
